2006-11-26  Bruno Haible  <bruno@clisp.org>

	* lib/moo.h (IS_INSTANCE): Fix reference to vtable.

2006-11-26  Bruno Haible  <bruno@clisp.org>

	* build-aux/moopp: In the C++ class definition, add 'operator ==',
	'operator !=' members, and add constructors for downcasting.

2006-11-25  Bruno Haible  <bruno@clisp.org>

	* lib/glibconfig_.h (g_return_if_fail, g_return_val_if_fail,
	g_return_if_reached, g_return_val_if_reached): Return instead of
	calling abort().

2006-11-12  Bruno Haible  <bruno@clisp.org>

	* modules/libcroco: New file.
	* m4/libcroco.m4: New file.
	* lib/libcroco/cr-additional-sel.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-additional-sel.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-attr-sel.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-attr-sel.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-cascade.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-cascade.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-declaration.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-declaration.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-doc-handler.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-doc-handler.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-enc-handler.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-enc-handler.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-fonts.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-fonts.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-input.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-input.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-num.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-num.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-om-parser.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-om-parser.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-parser.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-parser.h: New file, from libcroco-0.6.1.