@@ -1,5 +1,13 @@
 2006-11-26  Bruno Haible  <bruno@clisp.org>
 
+	Optimize IS_INSTANCE.
+	* build-aux/moopp: Emit also a classname_SUPERCLASSES_LENGTH macro.
+	* lib/moo.h (IS_INSTANCE): Use the value of this macro, known at
+	compile time.
+	(IS_INSTANCE_PRIVATE): Remove macro.
+
+2006-11-26  Bruno Haible  <bruno@clisp.org>
+
 	* lib/moo.h (IS_INSTANCE): Fix reference to vtable.
 
 2006-11-26  Bruno Haible  <bruno@clisp.org>
